@@ -9,6 +9,6 @@ LICENSE=MIT
 RDEPEND=>=sys-apps/systemd-217 sys-apps/debianutils !etc-crontab-systemd? ( !sys-process/dcron ) python_single_target_pypy3? ( virtual/pypy3:0= ) python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) >=dev-lang/python-exec-2:=[python_targets_pypy3(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_python2_7(-),python_single_target_pypy3(+)?,python_single_target_python3_3(+)?,python_single_target_python3_4(+)?] sys-process/cronbase
 REQUIRED_USE=^^ ( python_single_target_pypy3 python_single_target_python3_3 python_single_target_python3_4 ) python_single_target_pypy3? ( python_targets_pypy3 ) python_single_target_python3_3? ( python_targets_python3_3 ) python_single_target_python3_4? ( python_targets_python3_4 )
 SLOT=0
-SRC_URI=https://github.com/systemd-cron/systemd-cron/archive/v1.5.3.tar.gz
+SRC_URI=https://github.com/systemd-cron/systemd-cron/archive/v1.5.3.tar.gz -> systemd-cron-1.5.3.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	62927b3db3a589b0806255f3a002d5d3	python-single-r1	351da1aa73960a282591217fb57c1bb8	python-utils-r1	0295a286ec27cab6af76b3b75ba07a3a	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=53743158b9ccfc2e4f9fca38ece01b96
+_md5_=4f58ed505b5e84489541a03f451ba5cb
