@@ -2,6 +2,6 @@ DEFINED_PHASES=-
 DESCRIPTION=Virtual for cron
 EAPI=4
 KEYWORDS=alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd
-RDEPEND=|| ( sys-process/cronie sys-process/vixie-cron sys-process/bcron sys-process/dcron sys-process/fcron )
+RDEPEND=|| ( sys-process/cronie sys-process/vixie-cron sys-process/bcron sys-process/dcron sys-process/fcron sys-process/systemd-cron )
 SLOT=0
-_md5_=ac864d97f0f62e03646c08b41f37e7b3
+_md5_=7229ed99ecdfd76b3c47317bd72c9c06
