@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/systemd-cron/systemd-cron-1.5.3.ebuild,v 1.1 2015/07/18 15:48:50 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/systemd-cron/systemd-cron-1.5.3.ebuild,v 1.2 2015/08/07 22:32:52 rich0 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( pypy3 python{3_3,3_4} )
@@ -8,7 +8,7 @@ inherit eutils python-single-r1 systemd
 
 DESCRIPTION="systemd units to provide minimal cron daemon functionality by running scripts in cron directories"
 HOMEPAGE="https://github.com/systemd-cron/systemd-cron/"
-SRC_URI="https://github.com/systemd-cron/${PN}/archive/v${PV}.tar.gz"
+SRC_URI="https://github.com/systemd-cron/${PN}/archive/v${PV}.tar.gz -> systemd-cron-${PV}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
