@@ -1,6 +1,9 @@
 # ChangeLog for virtual/cron
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/cron/ChangeLog,v 1.4 2015/07/24 09:09:48 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/cron/ChangeLog,v 1.5 2015/08/07 22:34:50 rich0 Exp $
+
+  07 Aug 2015; Richard Freeman <rich0@gentoo.org> cron-0-r1.ebuild:
+  Add systemd-cron to virtual.
 
   24 Jul 2015; Mikle Kolyada <zlogene@gentoo.org> cron-0-r1.ebuild:
   Stable for all (bug #555712)
